feat(requests): request status
add check status request
